--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Jamie Levinson - Senior Product Manager CV
 	<section class="about">
 		<h3>About</h3>
 		<p>
-			Senior product manager and software engineer with extensive experience in the online media industry. I possess a unique blend of business and technical savvy; a big-picture vision, and the drive to make that vision a reality. 
+			Senior product manager and software engineer with extensive experience in the online media industry. <a href="https://medium.com/@bald_dad/from-wembley-to-web-standards-e7cc4ee61f01" target="_blank">Formerly a national recording artist</a> with the band, White Rabbits. I possess a unique blend of business and technical savvy; a big-picture vision, and the drive to make that vision a reality. 
 		</p>
 	</section>
 
@@ -26,12 +26,12 @@ title: Jamie Levinson - Senior Product Manager CV
 				<h4>SENIOR PRODUCT MANAGER, VIDEO</h4>
 				<h5>G/O Media (Formerly FMG) | Apr 19 - Present</h5>
 				<p>
-					Currently managing the entire video product life cycle of the G/O  media network (formerly FMG); generating 230MM video views a month.
+					Currently managing the entire video product life cycle of the G/O media network (formerly FMG); generating 230MM video views a month.
 				</p>
 			</div>
 			<div class="item">
 				<h4>SENIOR PRODUCT MANAGER</h4>
-				<h5>Fusion Media Group | Jan 17 - Apr 19</h5>
+				<h5>Fusion Media Group | Jan 17 - Present</h5>
 				<p>
 					Lead a team of designers and engineers across three time zones to deliver scalable digital publishing tools. Use OKRs to manage internal prioritization and communication with editorial, sales, analytics, and leadership to scale the business and grow a readership of over 100MM unique visitors a month.
 				</p>
@@ -49,14 +49,14 @@ title: Jamie Levinson - Senior Product Manager CV
 				<h4>SOFTWARE ENGINEER</h4>
 				<h5>The Onion | Oct 14 - Nov 15</h5>
 				<p>
-					Used CSS3, Javscript, AngularJS,  Python and HTML5 to develop a custom CMS powering the network of The Onion websites with a combined readership of over 10MM monthly uniques.
+					Developed a custom CMS powering a network of The Onion websites with a combined readership of over 10MM monthly uniques. CSS3, Javscript, AngularJS, Python and HTML5.
 				</p>
 			</div>
 			<div class="item">
 				<h4>FRONTEND DEVELOPER</h4>
 				<h5>Threadless | Jan 11 - Oct 14</h5>
 				<p>
-					Produced standards compliant HTML, CSS, Javascript and Python that enabled a community of artists and deisgners to monetize their work on one of the first crowd sourced platforms on the internet.
+					Produced standards compliant code enabling a community of artists and designers to monetize their work on one of the first crowd sourced platforms on the internet. HTML5, CSS3, Javascript and Python.
 				</p>
 			</div>
 		</div>
