--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Jamie Levinson - Senior Product Manager CV
 	<section class="about">
 		<h3>About</h3>
 		<p>
-			Senior product manager and software engineer with extensive experience in the online media industry. <a href="https://medium.com/@bald_dad/from-wembley-to-web-standards-e7cc4ee61f01" target="_blank">Formerly a national recording artist</a> with the band, White Rabbits.
+			Senior product manager and software engineer with extensive experience in the online media industry. <a href="https://medium.com/@bald_dad/from-wembley-to-web-standards-e7cc4ee61f01" target="_blank">Formerly an international recording artist</a> with the band, White Rabbits.
 		<p>
 		<p>
 			<i>They call Alabama the Crimson Tide, Call me Deacon Blues</i>. - Steely Dan 1977
@@ -43,7 +43,7 @@ title: Jamie Levinson - Senior Product Manager CV
 				<h4>SENIOR SOFTWARE ENGINEER</h4>
 				<h5>The Onion | Nov 15 - Dec 16</h5>
 				<p>
-					Served as lead front end engineer on several business and editorial initiatives. Developed an interactive features editor to scale premium content requests while keeping product overhead to a minimum and delivering on revenue goals.
+					Served as lead front end engineer on several business and editorial initiatives. Developed an interactive features editor to scale premium content requests while keeping product overhead to a minimum and delivering on revenue goals. CSS3, React, Javscript, HTML5.
 				</p>
 			</div>
 		</div>
