--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ title: Jamie Levinson - Senior Product Manager CV
 				<h4>SENIOR SOFTWARE ENGINEER</h4>
 				<h5>The Onion | Nov 15 - Dec 16</h5>
 				<p>
-					Served as lead front end engineer on several business and editorial initiatives. Developed an interactive features editor to scale premium content requests while keeping product overhead to a minimum and delivering on revenue goals. CSS3, React, Javscript, HTML5.
+					Served as lead front end engineer on several business and editorial initiatives. Developed an interactive features editor to scale premium content requests while keeping product overhead to a minimum and delivering on revenue goals. CSS3, React, Javascript, HTML5.
 				</p>
 			</div>
 		</div>
@@ -52,7 +52,7 @@ title: Jamie Levinson - Senior Product Manager CV
 				<h4>SOFTWARE ENGINEER</h4>
 				<h5>The Onion | Oct 14 - Nov 15</h5>
 				<p>
-					Developed a custom CMS powering a network of The Onion websites with a combined readership of over 10MM monthly uniques. CSS3, Javscript, AngularJS, Python and HTML5.
+					Developed a custom CMS powering a network of The Onion websites with a combined readership of over 10MM monthly uniques. CSS3, Javascript, AngularJS, Python and HTML5.
 				</p>
 			</div>
 			<div class="item">
