--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Jamie Levinson - Senior Product Manager CV
 	<section class="about">
 		<h3>About</h3>
 		<p>
-			Senior product manager and software engineer with extensive experience in the online media industry. <a href="https://medium.com/@bald_dad/from-wembley-to-web-standards-e7cc4ee61f01" target="_blank">Formerly an international recording artist</a> with the band, White Rabbits.
+			Senior product manager and software engineer with extensive experience in the online media industry.
 		<p>
 		<p>
 			<i>They call Alabama the Crimson Tide, Call me Deacon Blues</i>. - Steely Dan 1977
