--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@ title: Jamie Levinson - Senior Product Manager CV
 	<h3>References</h3>
 
 	<section class="references">
-		<p>Available upon request</p>
+		<p>
+			<a href="mailto:jamie.adam.levinson@gmail.com">Available upon request</a></p>
 	</section>
 
 </div><!--EO Resume-->
