--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@ title: Jamie Levinson - Senior Product Manager CV
 		<div class="col1">
 			<div class="item">
 				<h4>SENIOR PRODUCT MANAGER, VIDEO</h4>
-				<h5>G/O Media (Formerly FMG) | Apr 19 - Present</h5>
+				<h5>G/O Media (Formerly FMG) | Apr 2019 - Present</h5>
 				<p>
-					Currently managing the entire video product life cycle of the G/O media network (formerly FMG); generating 230MM video views a month.
+					Currently managing the entire video product life cycle of the G/O media network (formerly FMG); generating 230MM video views a month. Have grown monthly monetizable video views by 23% year-over-year. Replatformed entire video architecture of the network in a little over a month to save significant yearly expenses with minimal disruption to platform services. (Fusion Media Group was bought by a private equity firm, Great Hill Partners, in April 2019 and has been renamed to G/O Media)
 				</p>
 			</div>
 			<div class="item">
-				<h4>SENIOR PRODUCT MANAGER</h4>
-				<h5>Fusion Media Group | Jan 17 - Present</h5>
+				<h4>SENIOR PRODUCT MANAGER, INTERACTIVES</h4>
+				<h5>Fusion Media Group | Jan 2017 - Present</h5>
 				<p>
-					Lead a team of designers and engineers across three time zones to deliver scalable digital publishing tools. Use OKRs to manage internal prioritization and communication with editorial, sales, analytics, and leadership to scale the business and grow a readership of over 100MM unique visitors a month.
+					Lead a team of designers and engineers across three time zones to deliver digital publishing tools. Use objectives and key results (OKRs) to manage internal prioritization and communication with editorial, sales, analytics, and leadership to scale the business and grow a readership of over 100MM unique visitors a month. Created an in-house, single web page editor to develop scalable, custom storytelling features with no product team overhead. 
 				</p>
 			</div>
 			<div class="item">
 				<h4>SENIOR SOFTWARE ENGINEER</h4>
-				<h5>The Onion | Nov 15 - Dec 16</h5>
+				<h5>The Onion | Nov 2015 - Dec 2016</h5>
 				<p>
 					Served as lead front end engineer on several business and editorial initiatives. Developed an interactive features editor to scale premium content requests while keeping product overhead to a minimum and delivering on revenue goals. CSS3, React, Javascript, HTML5.
 				</p>
@@ -50,14 +50,14 @@ title: Jamie Levinson - Senior Product Manager CV
 		<div class="col2">
 			<div class="item">
 				<h4>SOFTWARE ENGINEER</h4>
-				<h5>The Onion | Oct 14 - Nov 15</h5>
+				<h5>The Onion | Oct 2014 - Nov 2015</h5>
 				<p>
-					Developed a custom CMS powering a network of The Onion websites with a combined readership of over 10MM monthly uniques. CSS3, Javascript, AngularJS, Python and HTML5.
+					Developed a custom content mangement system powering a network of The Onion websites with a combined readership of over 10MM monthly uniques. CSS3, Javascript, AngularJS, Python and HTML5.
 				</p>
 			</div>
 			<div class="item">
 				<h4>FRONTEND DEVELOPER</h4>
-				<h5>Threadless | Jan 11 - Oct 14</h5>
+				<h5>Threadless | Jan 2011 - Oct 2014</h5>
 				<p>
 					Produced standards compliant code enabling a community of artists and designers to monetize their work on one of the first crowd sourced platforms on the internet. HTML5, CSS3, Javascript and Python.
 				</p>
