--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ title: Jamie Levinson - Senior Product Manager CV
 				<h4>SENIOR PRODUCT MANAGER, INTERACTIVES</h4>
 				<h5>Fusion Media Group | Jan 2017 - Present</h5>
 				<p>
-					Lead a team of designers and engineers across three time zones to deliver digital publishing tools. Use objectives and key results (OKRs) to manage internal prioritization and communication with editorial, sales, analytics, and leadership to scale the business and grow a readership of over 100MM unique visitors a month. Created an in-house, single web page editor to develop scalable, custom storytelling features with no product team overhead. 
+					Lead a team of designers and engineers across three time zones to deliver digital publishing tools. Use objectives and key results (OKRs) to manage internal prioritization and communication with editorial, sales, analytics, and leadership to scale the business and grow a readership of over 100MM unique visitors a month.
 				</p>
 			</div>
 			<div class="item">
