--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@ title: Jamie Levinson - Senior Product Manager CV
 				<h4>SENIOR PRODUCT MANAGER, VIDEO</h4>
 				<h5>G/O Media (Formerly FMG) | Apr 2019 - Present</h5>
 				<p>
-					Currently managing the entire video product life cycle of the G/O media network (formerly FMG); generating 230MM video views a month. Have grown monthly monetizable video views by 23% year-over-year. Replatformed entire video architecture of the network in a little over a month to save significant yearly expenses with minimal disruption to platform services. (Fusion Media Group was bought by a private equity firm, Great Hill Partners, in April 2019 and has been renamed to G/O Media)
+					Currently managing the entire video product life cycle of the G/O media network (formerly FMG); generating 230MM video views a month. Have grown monthly monetizable video views by 23% year-over-year. Replatformed video architecture of the network in a little over a month to save significant yearly expenses with minimal disruption to platform services. (Fusion Media Group was bought by a private equity firm, Great Hill Partners, in April 2019 and has been renamed to G/O Media)
 				</p>
 			</div>
 			<div class="item">
 				<h4>SENIOR PRODUCT MANAGER, INTERACTIVES</h4>
 				<h5>Fusion Media Group | Jan 2017 - Present</h5>
 				<p>
-					Lead a team of designers and engineers across three time zones to deliver digital publishing tools. Use objectives and key results (OKRs) to manage internal prioritization and communication with editorial, sales, analytics, and leadership to scale the business and grow a readership of over 100MM unique visitors a month.
+					Lead a team of designers and engineers across three time zones to deliver digital publishing tools. Use objective and key results (OKR) framework to manage internal roadmap prioritization and communication with editorial, sales, analytics, and leadership to scale the business and grow our readership of over 100MM unique visitors a month.
 				</p>
 			</div>
 			<div class="item">
@@ -47,6 +47,9 @@ title: Jamie Levinson - Senior Product Manager CV
 				</p>
 			</div>
 		</div>
+
+		<div class="print-page-break"></div>
+
 		<div class="col2">
 			<div class="item">
 				<h4>SOFTWARE ENGINEER</h4>
