--- a/index.html
+++ b/index.html
@@ -1,19 +1,5 @@
 ---
 layout: default
-title: Jamie Levinson - Senior Product Manager CV
+title: Jamie Levinson
 ---
-<div class="hero">
-	<span class="hello">Hello, my name is</span>
-	<h1>Jamie Levinson &amp; I'm A Senior Product Manager</h1>
-	<ul class="nav">
-		<li>
-			<a href="/resume">Resume</a>
-		</li>
-		<li>
-			<a href="/projects">Projects</a>
-		</li>
-		<li>
-			<a href="/contact">Contact</a>
-		</li>
-	</ul>
-</div>
+
