--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@ title: Jamie Levinson - Projects
 ---
 
 <div class="projects-wrap">
-	<h1>Interactive Features</h1>
+	<h1>Projects</h1>
 	{% for project in site.data.project.projects %}
 		<div class="project-card">
 			<a href="{{ project.url }}" class="project-image">
