Update gitignore and desc

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ title: Jamie Levinson - Senior Product Manager CV
 				<h4>SENIOR PRODUCT MANAGER, VIDEO</h4>
 				<h5>G/O Media (Formerly FMG) | Apr 2019 - Present</h5>
 				<p>
-					Currently managing the entire video product life cycle of the G/O media network (formerly FMG); generating 230MM video views a month. Have grown monthly monetizable video views by 23% year-over-year. Replatformed video architecture of the network to save significant yearly hosting expenses with minimal disruption to platform services. (Fusion Media Group was bought by a private equity firm, Great Hill Partners, in April 2019 and has been renamed to G/O Media)
+					Currently managing the entire video product life cycle of the G/O media network (formerly FMG); generating 230MM video views a month. Have grown monthly monetizable video views by 23% year-over-year. Replatformed network video architecture and upload services to save significant yearly hosting expenses with minimal disruption to native publishing platform. (Fusion Media Group was bought by a private equity firm, Great Hill Partners, in April 2019 and has been renamed to G/O Media)
 				</p>
 			</div>
 			<div class="item">
