--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@ title: Jamie Levinson - Senior Product Manager CV
 		<p>School Of Library and Information Studies</p>
 	</section>
 
+	<div class="print-page-break"></div>
+
 	<h3>References</h3>
 
 	<section class="references">
