--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@ title: Jamie Levinson - Senior Product Manager CV
 	<section class="experience">
 		<div class="col1">
 			<div class="item">
-				<h4>SENIOR PRODUCT MANAGER, VIDEO</h4>
+				<h4>Senior Product Manager, Video</h4>
 				<h5>G/O Media (Formerly FMG) | Apr 2019 - Present</h5>
 				<p>
 					Currently managing the entire video product life cycle of the G/O media network (formerly FMG); generating 230MM video views a month. Have grown monthly monetizable video views by 23% year-over-year. Refactored network video architecture and upload services to save significant yearly hosting expenses with minimal disruption to native publishing platform. (Fusion Media Group was bought by a private equity firm, Great Hill Partners, in April 2019 and has been renamed to G/O Media)
 				</p>
 			</div>
 			<div class="item">
-				<h4>SENIOR PRODUCT MANAGER, INTERACTIVES</h4>
+				<h4>Senior Product Manager, Interactives</h4>
 				<h5>Fusion Media Group | Jan 2017 - Present</h5>
 				<p>
 					Lead a team of designers and engineers across three time zones to deliver digital publishing tools. Use objective and key results (OKR) framework to manage internal roadmap prioritization and communication with editorial, sales, analytics, and leadership to scale the business and grow our readership of over 100MM unique visitors a month.
 				</p>
 			</div>
 			<div class="item">
-				<h4>SENIOR SOFTWARE ENGINEER</h4>
+				<h4>Senior Software Engineer</h4>
 				<h5>The Onion | Nov 2015 - Dec 2016</h5>
 				<p>
 					Served as lead front end engineer on several business and editorial initiatives. Developed an interactive features editor to scale premium content requests while keeping product overhead to a minimum and delivering on revenue goals. CSS3, React, Javascript, HTML5.
@@ -52,14 +52,14 @@ title: Jamie Levinson - Senior Product Manager CV
 
 		<div class="col2">
 			<div class="item">
-				<h4>SOFTWARE ENGINEER</h4>
+				<h4>Software Engineer</h4>
 				<h5>The Onion | Oct 2014 - Nov 2015</h5>
 				<p>
 					Developed a custom content mangement system powering a network of The Onion websites with a combined readership of over 10MM monthly uniques. CSS3, Javascript, AngularJS, Python and HTML5.
 				</p>
 			</div>
 			<div class="item">
-				<h4>FRONTEND DEVELOPER</h4>
+				<h4>Frontend Developer</h4>
 				<h5>Threadless | Jan 2011 - Oct 2014</h5>
 				<p>
 					Produced standards compliant code enabling a community of artists and designers to monetize their work on one of the first crowd sourced platforms on the internet. HTML5, CSS3, Javascript and Python.
