Update page breaks

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ title: Jamie Levinson - Senior Product Manager CV
 			</div>
 		</div>
 
-		<div class="print-page-break"></div>
+		<div class="print-page-break-ext"></div>
 
 		<div class="col2">
 			<div class="item">
@@ -77,7 +77,7 @@ title: Jamie Levinson - Senior Product Manager CV
 		<p>School Of Library and Information Studies</p>
 	</section>
 
-	<div class="print-page-break"></div>
+	<div class="this-thing"></div>
 
 	<h3>References</h3>
 
