Update page breaks

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ title: Jamie Levinson - Senior Product Manager CV
 				<h4>Senior Software Engineer</h4>
 				<h5>The Onion | Nov 2015 - Dec 2016</h5>
 				<p>
-					Served as lead front end engineer on several business and editorial initiatives. Developed an interactive features editor to scale premium content requests while keeping product overhead to a minimum and delivering on revenue goals. CSS3, React, Javascript, HTML5.
+					Served as lead front end engineer on several business and editorial initiatives. Developed an interactive features editor to scale premium content requests while keeping product overhead to a minimum and delivering on revenue goals. CSS3, React, Javascript, GitHub, HTML5.
 				</p>
 			</div>
 		</div>
@@ -55,14 +55,14 @@ title: Jamie Levinson - Senior Product Manager CV
 				<h4>Software Engineer</h4>
 				<h5>The Onion | Oct 2014 - Nov 2015</h5>
 				<p>
-					Developed a custom content mangement system powering a network of The Onion websites with a combined readership of over 10MM monthly uniques. CSS3, Javascript, AngularJS, Python and HTML5.
+					Developed a custom content mangement system powering a network of The Onion websites with a combined readership of over 10MM monthly uniques. CSS3, Javascript, AngularJS, Python, GitHub, HTML5.
 				</p>
 			</div>
 			<div class="item">
 				<h4>Frontend Developer</h4>
 				<h5>Threadless | Jan 2011 - Oct 2014</h5>
 				<p>
-					Produced standards compliant code enabling a community of artists and designers to monetize their work on one of the first crowd sourced platforms on the internet. HTML5, CSS3, Javascript and Python.
+					Produced standards compliant code enabling a community of artists and designers to monetize their work on one of the first crowd sourced platforms on the internet. HTML5, CSS3, Javascript, GitHub, Python.
 				</p>
 			</div>
 		</div>
@@ -77,7 +77,7 @@ title: Jamie Levinson - Senior Product Manager CV
 		<p>School Of Library and Information Studies</p>
 	</section>
 
-	<div class="this-thing"></div>
+	<div class="pb-ext"></div>
 
 	<h3>References</h3>
 
