--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: Jamie Levinson - Senior Product Manager CV
 	<section class="about">
 		<h3>About</h3>
 		<p>
-			Senior product manager and software engineer with extensive experience in the online media industry.
+			Senior product manager and software engineer with extensive experience in online media and the music industry.
 		<p>
 	</section>
 
@@ -59,10 +59,17 @@ title: Jamie Levinson - Senior Product Manager CV
 				</p>
 			</div>
 			<div class="item">
-				<h4>Frontend Developer</h4>
+				<h4>Frontend Web Developer</h4>
 				<h5>Threadless | Jan 2011 - Oct 2014</h5>
 				<p>
-					Produced standards compliant code enabling a community of artists and designers to monetize their work on one of the first crowd sourced platforms on the internet. HTML5, CSS3, Javascript, GitHub, Python.
+					Produced standards compliant code, from HTML emails to bespoke user interfaces, enabling a community of artists and designers to monetize their work on one of the first crowd sourced platforms on the internet. HTML5, CSS3, Javascript, GitHub, Python.
+				</p>
+			</div>
+			<div class="item">
+				<h4>Recording Artist</h4>
+				<h5>White Rabbits (Band) | Jan 2006 - Aug 2012</h5>
+				<p>
+					International recording artist and drummer with Brooklyn, NY based band White Rabbits. Released 3 records for major labels including ATO Records and Mute UK. Toured extensively throughout the US and completed several promotional world tours. Appeared on <i>Late Night With David Letterman</i> (3x), <i>Jimmy Kimmel Live</i> (2x), <i>Late Night With Jimmy Fallon</i> (1x), <i>Conan O'Brien</i> (1x) and <i>Later... with Jools Holland</i> (1x). Live festival appearances at Lollapalooza, Glastonbury, Coachella, Bonnaroo, Austin City Limits, and Sasquatch.
 				</p>
 			</div>
 		</div>
@@ -76,8 +83,6 @@ title: Jamie Levinson - Senior Product Manager CV
 		<h4>University Of Wisconsin - Madison</h4>
 		<p>School Of Library and Information Studies</p>
 	</section>
-
-	<div class="pb-ext"></div>
 
 	<h3>References</h3>
 
