--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ title: Jamie Levinson - Senior Product Manager CV
 			<h4>Software Engineer</h4>
 			<h5>The Onion | Oct 2014 - Nov 2015</h5>
 			<p>
-				Developed a custom content mangement system powering a network of The Onion websites with a combined readership of over 10MM monthly uniques. Django, CSS3, Javascript, AngularJS, Python, GitHub, HTML5.
+				Developed a custom content management system powering a network of The Onion websites with a combined readership of over 10MM monthly uniques. Django, CSS3, Javascript, AngularJS, Python, GitHub, HTML5.
 			</p>
 		</div>
 
