--- a/index.html
+++ b/index.html
@@ -1,94 +1,10 @@
 ---
 layout: default
-title: Jamie Levinson - Senior Product Manager CV
+title: Jamie Levinson
 ---
-<div class="resume">
 
-	<header>
-		<div class="col1">
-			<h1>Jamie <br/> Levinson</h1>
-			<h2>Senior Product Manager</h2>
-		</div>
-		{% if jekyll.environment == "development" %}
-		   {% include address.html %}
-		{% endif %}
-	</header>
-
-	<h3>Experience</h3>
-
-	<section class="experience">
-
-		<div class="item">
-			<h4>Senior Product Manager, Video Platform</h4>
-			<h5>G/O Media (Formerly FMG) | Apr 2019 - Present</h5>
-			<p>
-				Currently managing the entire product life cycle of the G/O Media network video platform; generating 230MM video views a month. Lead a team of designers and engineers across three time zones using objective and key results (OKR) framework to manage internal roadmap prioritization and communication with editorial, sales, analytics, and leadership to scale the business and grow a readership of over 100MM unique visitors a month. Have grown monthly monetizable video views by 23% year-over-year. Refactored network video architecture, player and upload services to save significant yearly hosting expenses with minimal disruption to native publishing platform. (Fusion Media Group was bought by a private equity firm, Great Hill Partners, in April 2019 and has been renamed to G/O Media)
-			</p>
-		</div>
-
-		<div class="item">
-			<h4>Senior Product Manager, Interactive Features</h4>
-			<h5>Fusion Media Group | Jan 2017 - Apr 2019</h5>
-			<p>
-				Responsible for leading a distributed team of designers and engineers to create large, immersive visual experiences to grow audience reach while breathing new life into evergreen content goals. Used key performance indicators (KPIs), stakeholder interviews and analytics to identify and prioritize tasks in the product roadmap while supporting sales and editorial teams to maximize impact in the competitive online media space. Delivered native in-house custom feature editor to reduce development overhead and deliver scalable revenue opportunities for marketing and sales departments.
-			</p>
-		</div>
-
-		<div class="item">
-			<h4>Senior Software Engineer</h4>
-			<h5>The Onion | Nov 2015 - Dec 2016</h5>
-			<p>
-				Served as lead frontend engineer on several business and editorial initiatives from conception to distribution. Delivered successful product launches using Agile methodologies, restful APIs and in-house frontend frameworks. Django, CSS3, React, Javascript, GitHub, HTML5.
-			</p>
-		</div>
-
-		<div class="item">
-			<h4>Software Engineer</h4>
-			<h5>The Onion | Oct 2014 - Nov 2015</h5>
-			<p>
-				Developed a custom content management system powering a network of The Onion websites with a combined readership of over 10MM monthly uniques. Django, CSS3, Javascript, AngularJS, Python, GitHub, HTML5.
-			</p>
-		</div>
-
-		<div class="item">
-			<h4>Frontend Web Developer</h4>
-			<h5>Threadless | Jan 2011 - Oct 2014</h5>
-			<p>
-				Produced standards compliant code, from HTML emails to bespoke user interfaces, enabling a community of artists and designers to monetize their work on one of the first crowd sourced platforms on the internet. Django, HTML5, CSS3, Javascript, GitHub, Python.
-			</p>
-		</div>
-
-		<div class="item">
-			<h4>Recording Artist</h4>
-			<h5>White Rabbits (Band) | Jan 2006 - Aug 2012</h5>
-			<p>
-				International recording artist and drummer with Brooklyn, NY based band White Rabbits. Released 3 records for major labels including ATO Records and Mute UK. Toured extensively throughout the US and completed several promotional world tours. Appeared on <i>Late Night With David Letterman</i> (3x), <i>Jimmy Kimmel Live</i> (2x), <i>Late Night With Jimmy Fallon</i> (1x), <i>Conan O'Brien</i> (1x) and <i>Later... with Jools Holland</i> (1x). Live festival appearances at Lollapalooza, Glastonbury, Coachella, Bonnaroo, Austin City Limits, and Sasquatch.
-			</p>
-		</div>
-
-	</section>
-
-	<div class="print-page-break"></div>
-	<div class="pb-ext "></div>
-
-	<h3>Education</h3>
-
-	<section class="education">
-		<h4>University Of Missouri - Columbia</h4>
-		<p>Bachelor Of Arts, Communications; Media Production and Public Relations</p>
-		<h4>University Of Wisconsin - Madison</h4>
-		<p>School Of Library and Information Studies</p>
-	</section>
-
-	<h3>References</h3>
-
-	<section class="references">
-		{% if jekyll.environment == "development" %}
-		   {% include references.html %}
-		{% endif %}
-		{% if jekyll.environment == "production" %}
-		   {% include ref-placeholder.html %}
-		{% endif %}
-	</section>
-
-</div><!--EO Resume-->
+<div class="full-page">
+	<div class="inner-container">
+		<img src="https://jamie-levinson.s3.amazonaws.com/a1757740249_10.jpg" alt="El"/>
+	</div>
+</div>
