--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 layout: default
 title: Jamie Levinson
 ---
-
-<div class="full-page">
-	<div class="inner-container">
-		<img src="https://jamie-levinson.s3.amazonaws.com/a1757740249_10.jpg" alt="El"/>
-	</div>
+<div id="overlay">
+	<video id="video" src="https://jamie-levinson.s3.amazonaws.com/target.mp4" type="video/mp4" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+	  Sorry, your browser doesn't support embedded videos.
+	</video>
+	<input type="range" id="rangeVolume" min="0" max="1" step="0.01" value="0">
 </div>
+
+<script>
+	var video = document.getElementById('video');
+	var volumeControl = document.getElementById('rangeVolume');
+	function setVolume(e) {
+	    var volume = e.target.value;
+	    video.volume = volume;
+	    if(video.muted) {
+	        video.muted = !video.muted
+	    };
+	}
+	volumeControl.addEventListener('change', setVolume);
+</script>
