--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Jamie Levinson
 ---
 <div id="overlay">
-	<video id="video" src="https://jamie-levinson.s3.amazonaws.com/target.mp4" type="video/mp4" controls playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+	<video id="video" src="https://jamie-levinson.s3.amazonaws.com/target.mp4" type="video/mp4" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
 	  Sorry, your browser doesn't support embedded videos.
 	</video>
 	<input type="range" id="rangeVolume" min="0" max="1" step="0.01" value="0">
