--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Jamie Levinson
 		<input type="range" id="rangeVolume" min="0" max="1" step=".1" value="0">
 	</div>
 	<div id="stage">
-		<h1>DREAMS</h1>
+		<h1>hello	&#x2122;</h1>
 	</div>
 </div>
 
